--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -12,7 +12,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .wrapper {
-		background: #E3E3E3;
+		background: #00FFFF;
 }
 
 .img-circle {
@@ -131,7 +131,7 @@ h1, h2, h3, h4, h5, h6 {
 .fa {
 	font-size: 2.2em;
 	padding: 0.1em 0.4em;
-	color: #8a8a8a;
+	color: #000000;
 }
 
 .fa:hover {
@@ -305,7 +305,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #footer-cta a:hover {
-	background: #fff;
+	background: #00FFFF;
 	color: rgba(255, 103, 68, 0.91);
 	box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 14px 1px rgba(0, 0, 0, 0.15);
 }
